--- a/index.html
+++ b/index.html
@@ -117,6 +117,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
