--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
+      <!-- Made more of these divs for each hour I needed in the schedule
+      i removed the classes of past, present and future because we're adding and changing 
+    them dependent on the time provided to us by dayJS. That's pretty much all I needed to do to the HTML. -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
